# BioniumX

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pytest.yml  sphinx_docs.yml
bioniumx/: __init__.py  core.py  features.py  habitability.py  pipeline.py  spectra.py  thermo.py  utils.py
bioniumx/assessment/: __init__.py  false_positives.py
bioniumx/data/: generator.py  ingestion.py  preprocessing.py
bioniumx/datasets/: __init__.py  external.py  fetch_real.py  ingestion.py
bioniumx/detection/: bayesian.py  cross_correlation.py  equivalent_width.py
bioniumx/habitability/: indices.py
bioniumx/io/: hdf5.py
bioniumx/modeling/: __init__.py  baseline_rf.py  cnn_1d.py
bioniumx/models/: __init__.py  cnn1d.py  fetch.py
bioniumx/molecules/: __init__.py  catalog.py  disequilibrium.py
bioniumx/physics/: atmosphere.py  habitability.py
bioniumx/preprocessing/: filters.py  masking.py  normalizer.py
bioniumx/simulator/: __init__.py  generator.py
bioniumx/spectra/: __init__.py  emission.py  reflectance.py  transmission.py
dashboard/: app.py
data/: exoplanet_catalog.json
docs/: api_reference.rst  conf.py  core_functionality.rst  index.rst  installation.rst  quickstart.rst  timeline.rst
examples/: app.py  generate_doc_plots.py  usage_example.py
tests/: test_engines.py  test_generator.py  test_models.py  test_preprocessing.py  test_scoring.py
(+62 files in other folders)
