[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioniumx"
version = "0.1.0"
description = "Deep Learning for Biosignature Detection in Exoplanet Atmospheres"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Bionium-X Research Collaborative" }
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "torch",
    "h5py",
    "astropy",
    "matplotlib",
    "plotly",
    "numba",
    "pymc",
    "exoplanet",
    "cdflib",
    "pooch"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx",
    "sphinx-rtd-theme"
]
dashboard = [
    "streamlit>=1.40.0",
    "altair>=5.0.0"
]

[tool.setuptools.packages.find]
include = ["bioniumx*"]
exclude = ["tests*", "docs*", "examples*"]
